--- a/src/main/webapp/resources/css/check.css
+++ b/src/main/webapp/resources/css/check.css
@@ -40,7 +40,7 @@
     font-size: 30px;
     line-height: 36px;
     text-align: center;
-    color: #000000;
+    color: #F1726B;
 }
 
 /* Rectangle 17 */
