feat 학년별 이수 학점 조회에서 username 출력

--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -60,7 +60,7 @@
     width: 306px;
     height: 36px;
     left: calc(50% - 306px/2 - 411px);
-    bottom: 143px;
+    top: calc(50% - 36px/2 + 259.5px);
     font-family: 'Inter';
     font-style: normal;
     font-weight: 700;
