feat: 글씨체 roboto 변경 완료

--- a/src/main/webapp/resources/css/check.css
+++ b/src/main/webapp/resources/css/check.css
@@ -31,7 +31,7 @@
     height: 36px;
     left: calc(50% - 466.14px/2 + 293.74px);
     top: calc(50% - 36px/2 + 55.5px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
@@ -56,7 +56,7 @@
     right: 248px;
     top: 347px;
     bottom: 449px;
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
