--- a/src/main/webapp/resources/css/home.css
+++ b/src/main/webapp/resources/css/home.css
@@ -60,7 +60,7 @@
     height: 36px;
     left: calc(50% - 306px/2 - 411px);
     top: calc(50% - 36px/2 + 259.5px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -75,7 +75,7 @@
     height: 36px;
     left: calc(50% - 187px/2 + 5.5px);
     top: calc(50% - 36px/2 + 259.5px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
@@ -90,7 +90,7 @@
     height: 36px;
     left: calc(50% - 236px/2 + 411px);
     top: calc(50% - 36px/2 + 259.5px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 25px;
