--- a/src/main/webapp/resources/css/login.css
+++ b/src/main/webapp/resources/css/login.css
@@ -1,11 +1,3 @@
-.error{
-    position: absolute;
-    width: 500px;
-    height: 88px;
-    left: 390px;
-    top: 272px;
-}
-
 .username{
     position: absolute;
     width: 500px;
@@ -22,7 +14,7 @@
     height: 60px;
     left: calc(50% - 251px/2 + 0.5px);
     top: calc(50% - 60px/2 + 10px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
@@ -47,7 +39,7 @@
     height: 60px;
     left: calc(50% - 251px/2 - 0.5px);
     top: calc(50% - 60px/2 + 116px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
@@ -71,7 +63,7 @@
     height: 60px;
     left: calc(50% - 149px/2 - 0.5px);
     top: calc(50% - 60px/2 + 222px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
@@ -95,7 +87,7 @@
     height: 36px;
     left: calc(50% - 454px/2);
     top: calc(50% - 36px/2 - 100px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
@@ -119,7 +111,7 @@
     height: 36px;
     left: calc(50% - 454px/2);
     top: calc(50% - 80px/2 - 100px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 30px;
@@ -134,7 +126,7 @@
     height: 60px;
     left: calc(50% - 314px/2 + 31px);
     top: calc(50% - 60px/2 - 211px);
-    font-family: 'Inter';
+    font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
     font-size: 50px;
