--- a/src/main/webapp/resources/css/offers.css
+++ b/src/main/webapp/resources/css/offers.css
@@ -4,12 +4,10 @@
     height: 36px;
     left: 19px;
     top: 151px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: 36px;
-    text-align: center;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 117px;
     color: #000000;
 }
 
@@ -19,6 +17,12 @@
     height: 428px;
     left: calc(50% - 1171px/2 + 0.5px);
     top: calc(50% - 428px/2 + 82px);
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 30px;
+    line-height: 117px;
+    color: #000000;
 }
 
 .description{
@@ -27,11 +31,10 @@
     height: 36px;
     left: 19px;
     top: 151px;
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 700;
+    font-family: 'Roboto';
+    font-weight: 400;
     font-size: 25px;
-    line-height: 30px;
+    line-height: 117px;
     text-align: center;
     color: #000000;
 }
@@ -49,7 +52,7 @@
     padding: 8px;
     text-align: center;
     border-bottom: 1px solid #ddd;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .oc-th{
