--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -1,3 +1,16 @@
+.username{
+    position: absolute;
+    width: 500px;
+    height: 36px;
+    left: 19px;
+    top: 151px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    font-size: 25px;
+    line-height: 117px;
+    color: #000000;
+}
+
 .body{
     background-color: #D4E8BA;
 }
@@ -5,8 +18,8 @@
     position: absolute;
     width: 800px;
     height: 490px;
-    left: calc(50% - 400px);
-    top: calc(50% - 245px);
+    left: calc(50% - 800px/2 - 1px);
+    top: calc(50% - 490px/2 + 113px);
     background: #FFFFFF;
 }
 
