--- a/src/main/webapp/resources/css/offers.css
+++ b/src/main/webapp/resources/css/offers.css
@@ -21,7 +21,6 @@
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
-    line-height: 117px;
     color: #000000;
 }
 
@@ -41,13 +40,33 @@
 
 .thead-tr {
     background-color: #D4E8BA;
+    width: 300px;
+    padding: 8px;
+    border-bottom: 1px solid #ddd;
+    font-size: 25px;
+    font-family: 'Roboto';
+    font-weight: 400;
+    text-align: center;
 }
 
-.oc-thead-tr{
-    background-color: #D4E8BA;
+.tbody-td {
+    width: 300px;
+    padding: 8px;
+    font-size: 20px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    /*background-color: #FFE3A8;*/
+    /*width: 300px;*/
+    /*padding: 8px;*/
+    /*text-align: center;*/
+    /*font-size: 20px;*/
+    /*text-align: center;*/
+    /*border-bottom: 1px solid #ddd;*/
+    /*background-color: #FFE3A8;*/
 }
 
-.th {
+.tfoot{
+    background-color: #FFE3A8;
     width: 150px;
     padding: 8px;
     text-align: center;
@@ -55,50 +74,68 @@
     font-size: 25px;
 }
 
-.oc-th{
+.oc-thead-tr{
+    background-color: #D4E8BA;
+    width: 150px;
     padding: 8px;
     text-align: center;
     border-bottom: 1px solid #ddd;
-    font-size: 30px;
-}
-
-.tbody-td {
-    padding: 2px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 20px;
+    font-size: 25px;
 }
 
 .oc-tbody-td{
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 20px;
-}
-
-.oc-tbody{
-    background-color: #FFE3A8;
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 20px;
-}
-
-.content{
     width: 300px;
     padding: 8px;
+    font-size: 20px;
     text-align: center;
     border-bottom: 1px solid #ddd;
-    font-size: 20px;
+    background-color: #FFE3A8;
 }
 
-.tbody-tr{
-    background-color: #FFE3A8;
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 30px;
-}
+
+
+
+/*.oc-thead-tr{*/
+/*    background-color: #D4E8BA;*/
+/*}*/
+
+/*.oc-th{*/
+/*    padding: 8px;*/
+/*    text-align: center;*/
+/*    border-bottom: 1px solid #ddd;*/
+/*    font-size: 30px;*/
+/*}*/
+
+/*.td{*/
+/*    text-align: center;*/
+/*    border-bottom: 1px solid #ddd;*/
+/*    font-size: 20px;*/
+/*    background-color: #D4E8BA;*/
+/*}*/
+
+
+/*.oc-tbody-td{*/
+/*    padding: 8px;*/
+/*    text-align: center;*/
+/*    border-bottom: 1px solid #ddd;*/
+/*    font-size: 20px;*/
+/*}*/
+
+/*.oc-tbody{*/
+/*    background-color: #FFE3A8;*/
+/*    text-align: center;*/
+/*    border-bottom: 1px solid #ddd;*/
+/*    font-size: 20px;*/
+/*}*/
+
+
+/*.tbody-tr{*/
+/*    background-color: #FFE3A8;*/
+/*    padding: 8px;*/
+/*    text-align: center;*/
+/*    border-bottom: 1px solid #ddd;*/
+/*    font-size: 30px;*/
+/*}*/
 
 .detail-link{
     color: #EF7069;
