--- a/src/main/webapp/resources/css/offers.css
+++ b/src/main/webapp/resources/css/offers.css
@@ -13,14 +13,15 @@
 
 .offerTable{
     position: absolute;
-    width: 1171px;
-    height: 428px;
-    left: calc(50% - 1171px/2 + 0.5px);
+    width: 1180px;
+    left: calc(50% - 1180px/2 + 0.5px);
     top: calc(50% - 428px/2 + 82px);
+
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
+    line-height: 100px;
     color: #000000;
 }
 
@@ -40,103 +41,58 @@
 
 .thead-tr {
     background-color: #D4E8BA;
-    width: 300px;
+}
+
+.th {
+    width: 150px;
     padding: 8px;
+    text-align: center;
     border-bottom: 1px solid #ddd;
     font-size: 25px;
-    font-family: 'Roboto';
-    font-weight: 400;
-    text-align: center;
 }
 
 .tbody-td {
+    padding: 2px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    font-size: 20px;
+}
+
+.content{
     width: 300px;
     padding: 8px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
     font-size: 20px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    /*background-color: #FFE3A8;*/
-    /*width: 300px;*/
-    /*padding: 8px;*/
-    /*text-align: center;*/
-    /*font-size: 20px;*/
-    /*text-align: center;*/
-    /*border-bottom: 1px solid #ddd;*/
-    /*background-color: #FFE3A8;*/
 }
 
-.tfoot{
+.tbody-tr{
     background-color: #FFE3A8;
-    width: 150px;
     padding: 8px;
     text-align: center;
     border-bottom: 1px solid #ddd;
-    font-size: 25px;
+    font-size: 30px;
 }
-
-.oc-thead-tr{
-    background-color: #D4E8BA;
-    width: 150px;
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 25px;
-}
-
-.oc-tbody-td{
-    width: 300px;
-    padding: 8px;
-    font-size: 20px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    background-color: #FFE3A8;
-}
-
-
-
-
-/*.oc-thead-tr{*/
-/*    background-color: #D4E8BA;*/
-/*}*/
-
-/*.oc-th{*/
-/*    padding: 8px;*/
-/*    text-align: center;*/
-/*    border-bottom: 1px solid #ddd;*/
-/*    font-size: 30px;*/
-/*}*/
-
-/*.td{*/
-/*    text-align: center;*/
-/*    border-bottom: 1px solid #ddd;*/
-/*    font-size: 20px;*/
-/*    background-color: #D4E8BA;*/
-/*}*/
-
-
-/*.oc-tbody-td{*/
-/*    padding: 8px;*/
-/*    text-align: center;*/
-/*    border-bottom: 1px solid #ddd;*/
-/*    font-size: 20px;*/
-/*}*/
-
-/*.oc-tbody{*/
-/*    background-color: #FFE3A8;*/
-/*    text-align: center;*/
-/*    border-bottom: 1px solid #ddd;*/
-/*    font-size: 20px;*/
-/*}*/
-
-
-/*.tbody-tr{*/
-/*    background-color: #FFE3A8;*/
-/*    padding: 8px;*/
-/*    text-align: center;*/
-/*    border-bottom: 1px solid #ddd;*/
-/*    font-size: 30px;*/
-/*}*/
 
 .detail-link{
     color: #EF7069;
 }
+
+.oc-thead-tr{
+    background-color: #D4E8BA;
+    padding: 8px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    font-size: 30px;
+}
+
+.oc-tbody-td{
+    padding: 2px;
+    text-align: center;
+    border-bottom: 1px solid #ddd;
+    font-size: 18px;
+    background-color: #FFE3A8;
+    width: 200px;
+}
+
+
