--- a/src/main/webapp/resources/css/offers.css
+++ b/src/main/webapp/resources/css/offers.css
@@ -1,3 +1,4 @@
+/* offers.css */
 .username{
     position: absolute;
     width: 500px;
@@ -14,6 +15,7 @@
 .offerTable{
     position: absolute;
     width: 1180px;
+    height: 428px;
     left: calc(50% - 1180px/2 + 0.5px);
     top: calc(50% - 428px/2 + 82px);
 
@@ -21,7 +23,7 @@
     font-style: normal;
     font-weight: 400;
     font-size: 30px;
-    line-height: 100px;
+    line-height: 50px;
     color: #000000;
 }
 
@@ -39,18 +41,6 @@
     color: #000000;
 }
 
-.thead-tr {
-    background-color: #D4E8BA;
-}
-
-.th {
-    width: 150px;
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 25px;
-}
-
 .tbody-td {
     padding: 2px;
     text-align: center;
@@ -58,20 +48,12 @@
     font-size: 20px;
 }
 
-.content{
-    width: 300px;
-    padding: 8px;
-    text-align: center;
-    border-bottom: 1px solid #ddd;
-    font-size: 20px;
-}
-
 .tbody-tr{
     background-color: #FFE3A8;
-    padding: 8px;
+    padding: 2px;
     text-align: center;
     border-bottom: 1px solid #ddd;
-    font-size: 30px;
+    font-size: 25px;
 }
 
 .detail-link{
@@ -80,7 +62,7 @@
 
 .oc-thead-tr{
     background-color: #D4E8BA;
-    padding: 8px;
+    padding: 2px;
     text-align: center;
     border-bottom: 1px solid #ddd;
     font-size: 30px;
@@ -92,7 +74,6 @@
     border-bottom: 1px solid #ddd;
     font-size: 18px;
     background-color: #FFE3A8;
-    width: 200px;
 }
 
 
